// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScriptAttr(Timeout) should not to override script timeout by default: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`ScriptAttr(Timeout) should not to override script timeout by default: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`ScriptAttr(Timeout) should not to override script timeout by default: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`ScriptAttr(Timeout) should not to override script timeout by default: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`ScriptAttr(Timeout) should not to override script timeout by default: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -81,0 +81,1 @@
+/******/ 	  result.timeout = 120;
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from config: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from config: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from config: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from config: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from config: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -81,0 +81,1 @@
+/******/ 	  result.timeout = 60;
@@ -219,1 +220,1 @@
-/******/ 				script.timeout = 120;
+/******/ 				script.timeout = 60;
@@ -247,1 +248,1 @@
-/******/ 				}, 120000);
+/******/ 				}, 60000);
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from options: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from options: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from options: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from options: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from options: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -81,0 +81,1 @@
+/******/ 	  result.timeout = 50;
"
`;
